Fixed horizontal overflow on #main-slider

--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -62,8 +62,8 @@
     &::before {
         content: "";
         color: white;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        min-height: 100vh;
         background: linear-gradient(
             0deg, black, black 25%, transparent 55%, transparent
         );
